--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
+    "handlebars": "^4.7.7",
+    "mongoose": "^6.3.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
