--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mongoose": "^6.3.3",
+    "nodemailer": "^6.7.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
